@@ -2,9 +2,10 @@ package no.nav.fo.internal;
 
 
 import org.junit.Test;
-import sun.misc.BASE64Encoder;
 
 import javax.servlet.http.HttpServletRequest;
+
+import java.util.Base64;
 
 import static no.nav.fo.internal.AuthorizationUtils.AUTHORIZATION;
 import static no.nav.fo.internal.AuthorizationUtils.SYSTEMUSER_PASSWORD;
@@ -27,13 +28,13 @@ public class AuthorizationUtilsTest {
 
     @Test
     public void skalGodtaRequest() {
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
 
         System.setProperty(SYSTEMUSER_USERNAME, "brukernavn");
         System.setProperty(SYSTEMUSER_PASSWORD, "passord");
         
         String basicAuth = "brukernavn:passord";
-        String basicAuthDecoded = encoder.encode(basicAuth.getBytes());
+        String basicAuthDecoded = new String(encoder.encode(basicAuth.getBytes()));
         String authHeader = "Basic " + basicAuthDecoded;
 
         HttpServletRequest request = mock(HttpServletRequest.class);
